package com.trading.lob;

public enum Side {
    BUY, SELL;
}
