@startuml

class OrderBook {
 List<Order> buyOrders
 List<Order> sellOrders

 OrderBook()
 void addOrder(Order order)
 void removeOrder(Order order)
 Optional<Order> modifyOrderBook(int quantity, Order order)
 List<Order> getAllBiddingOrders()
 List<Order> getAllSellingOrders()
}

class Order {
    int id, quantity, price
    Side orderSide
}

enum Side {
    BUY, SELL
}

OrderBook o--  Order
Order *-- Side

@enduml